[gd_scene load_steps=7 format=3 uid="uid://bq37pauhr7ehy"]

[ext_resource type="Script" uid="uid://bygp0rxw28pnh" path="res://Scripts/Enemies/crossbower.gd" id="1_50btn"]
[ext_resource type="Texture2D" uid="uid://c1lo75th7b88g" path="res://Textures/icon.svg" id="2_1qho8"]
[ext_resource type="PackedScene" uid="uid://bqo6qnqcmww4y" path="res://Scenes/UI/health_bar.tscn" id="3_1qho8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kuff7"]
radius = 35.0
height = 126.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pm5xl"]
radius = 35.0
height = 126.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_50btn"]
size = Vector2(848, 768)

[node name="Crossbower" type="CharacterBody2D" groups=["Enemies"]]
collision_mask = 18
script = ExtResource("1_50btn")
speed = 100
attack_damage = 0
knockback_strength = 0.0
hp = 35
max_hp = 35
parry_damage = 40

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(-1.90735e-06, 0)
scale = Vector2(0.337, 0.599)
texture = ExtResource("2_1qho8")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
scale = Vector2(0.61, 0.61)
shape = SubResource("CapsuleShape2D_kuff7")

[node name="CollisionDamage" type="Area2D" parent="."]
collision_layer = 0

[node name="PlayerCollision" type="CollisionShape2D" parent="CollisionDamage"]
scale = Vector2(0.61, 0.61)
shape = SubResource("CapsuleShape2D_pm5xl")

[node name="AttackRange" type="Area2D" parent="."]
position = Vector2(0, 104)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(0, -104)
scale = Vector2(2.26, 2.26)
shape = SubResource("RectangleShape2D_50btn")

[node name="AttackCharge" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackCool" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LeftFloorCheck" type="RayCast2D" parent="."]
position = Vector2(-40, 0)
collision_mask = 18

[node name="RightFloorCheck" type="RayCast2D" parent="."]
position = Vector2(40, 0)
collision_mask = 18

[node name="HealthBar" parent="." instance=ExtResource("3_1qho8")]
offset_left = -75.0
offset_top = -97.5
offset_right = 77.0
offset_bottom = -70.5

[connection signal="body_entered" from="CollisionDamage" to="." method="_on_collision_damage_body_entered"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="AttackCharge" to="." method="_on_attack_charge_timeout"]
[connection signal="timeout" from="AttackCool" to="." method="_on_attack_cool_timeout"]
